cập nhật xóa sửa đồ uống

--- a/App.config
+++ b/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="Quan_Li_Tiem_Net.Properties.Settings.QLi_Tiem_NetConnectionString"
-            connectionString="Data Source=LAPTOP-7LPD0GBV;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;TrustServerCertificate=True"
+            connectionString="Data Source=HACLONG\SQLEXPRESS;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
