--- a/App.config
+++ b/App.config
@@ -6,6 +6,9 @@
         <add name="Quan_Li_Tiem_Net.Properties.Settings.QLi_Tiem_NetConnectionString"
             connectionString="Data Source=HACLONG\SQLEXPRESS;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
+        <add name="Quan_Li_Tiem_Net.Properties.Settings.QLi_Tiem_NetConnectionString1"
+            connectionString="Data Source=LAPTOP-7LPD0GBV;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
