thêm mẫu report

--- a/App.config
+++ b/App.config
@@ -4,7 +4,10 @@
     </configSections>
     <connectionStrings>
         <add name="Quan_Li_Tiem_Net.Properties.Settings.QLi_Tiem_NetConnectionString"
-            connectionString="Data Source=HACLONG\SQLEXPRESS;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;TrustServerCertificate=True"
+            connectionString="Data Source=LAPTOP-L1RVV769\SQLEXPRESS;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="Quan_Li_Tiem_Net.Properties.Settings.QLi_Tiem_NetConnectionString1"
+            connectionString="Data Source=LAPTOP-L1RVV769;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
