--- a/App.config
+++ b/App.config
@@ -1,16 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Quan_Li_Tiem_Net.Properties.Settings.QLi_Tiem_NetConnectionString"
-            connectionString="Data Source=HACLONG\SQLEXPRESS;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;TrustServerCertificate=True"
-            providerName="System.Data.SqlClient" />
-        <add name="Quan_Li_Tiem_Net.Properties.Settings.QLi_Tiem_NetConnectionString1"
-            connectionString="Data Source=LAPTOP-7LPD0GBV;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
-            providerName="System.Data.SqlClient" />
+        <add name="Quan_Li_Tiem_Net.Properties.Settings.QLi_Tiem_NetConnectionString" connectionString="Data Source=HACLONG\SQLEXPRESS;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+        <add name="Quan_Li_Tiem_Net.Properties.Settings.QLi_Tiem_NetConnectionString1" connectionString="Data Source=LAPTOP-7LPD0GBV;Initial Catalog=&quot;QLi Tiem Net&quot;;Integrated Security=True;Encrypt=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.Types" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-16.0.0.0" newVersion="16.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
